--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,18 @@ body,
   }
 }
 
+@layer utilities {
+  @variants responsive {
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
 @layer base {
   * {
     @apply border-border;
